--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -278,7 +278,7 @@ mark {
 }
 
 h1 {
-  margin: var(--gap-double) 0 calc(0.5 * var(--gap)) 0;
+  margin: 0.5rem 0 calc(0.5 * var(--gap)) 0;
   font-size: 2.25rem;
   font-weight: 800;
   letter-spacing: -0.05rem;
