--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -291,6 +291,14 @@ h2 {
   color: var(--accents-3);
 }
 
+h4 {
+  margin: 0.5rem 0 calc(0.5 * var(--gap)) 0;
+  font-size: 2rem;
+  font-weight: 600;
+  letter-spacing: -0.05rem;
+  text-align: -webkit-center;
+}
+
 .video {
   width: 1080px;
   max-width: calc(100vw - 40px);
